docs/v0.1.0/_sources/gallery/amplitude_retrieval.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/amplitude_retrieval.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_amplitude_retrieval.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_amplitude_retrieval.py:


Amplitude Retrieval for Overlapping Pulses
==========================================

This example demonstrates the use of the NonMaximumSuppression class to detect
Gaussian pulses in a one-dimensional signal. It generates a synthetic dataset
of Gaussian pulses, applies the non-maximum suppression algorithm, and plots
the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-39

.. code-block:: Python


    from DeepPeak.detection import NonMaximumSuppression
    from DeepPeak.detection import ClosedFormSolver
    from DeepPeak.generation import SignalGenerator
    from DeepPeak import Lorentzian, UniformCount

    NUM_PEAKS = 4
    SEQUENCE_LENGTH = 400
    NSAMPLES = 4
    gaussian_width = 0.03

    pulse_kernel = Lorentzian(
        amplitude=(50, 100),  # Amplitude range
        position=(0.1, 0.9),  # Peak position range
        width=gaussian_width,  # Width range
    )

    generator = SignalGenerator(sequence_length=SEQUENCE_LENGTH)

    dataset = generator.generate(
        n_samples=NSAMPLES,
        kernel=pulse_kernel,
        peak_count=UniformCount(bounds=(NUM_PEAKS, NUM_PEAKS)),
        noise_std=0.3,  # Add some noise
        categorical_peak_count=False,
    )

    dataset.plot(reference_pulse_trace=dataset.clean_signals)




.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_001.png
   :alt: Sample 0, Sample 1, Sample 2
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    findfont: Font family ['cursive'] not found. Falling back to DejaVu Sans.
    findfont: Generic family 'cursive' not found because none of the following families were found: Apple Chancery, Textile, Zapf Chancery, Sand, Script MT, Felipa, Comic Neue, Comic Sans MS, cursive
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.
    findfont: Font family ['Arial'] not found. Falling back to DejaVu Sans.

    <Figure size 800x900 with 3 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 40-41

Configure and run the detector

.. GENERATED FROM PYTHON SOURCE LINES 41-55

.. code-block:: Python

    peak_locator = NonMaximumSuppression(
        gaussian_sigma=0.003,
        threshold="auto",
        maximum_number_of_pulses=NUM_PEAKS,
        kernel_truncation_radius_in_sigmas=3,
    )

    batched_peak_detector = peak_locator.run_batch(
        time_samples=dataset.x_values, signal=dataset.signals
    )

    batched_peak_detector.plot()





.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_002.png
   :alt: Sample #0 (K=4, detected=1), Sample #1 (K=4, detected=1), Sample #2 (K=4, detected=1), Sample #3 (K=4, detected=1)
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 650x1120 with 4 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 56-57

Solve for amplitudes

.. GENERATED FROM PYTHON SOURCE LINES 57-65

.. code-block:: Python

    solver = ClosedFormSolver(sigma=dataset.widths.mean().squeeze())

    result = solver.run_batch(
        centers=batched_peak_detector.peak_times,
        center_samples=batched_peak_detector.peak_amplitude_raw,
    )

    result.compare_plot(true_amplitudes=dataset.amplitudes)



.. image-sg:: /gallery/images/sphx_glr_amplitude_retrieval_003.png
   :alt: amplitude retrieval
   :srcset: /gallery/images/sphx_glr_amplitude_retrieval_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 640x480 with 4 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.592 seconds)


.. _sphx_glr_download_gallery_amplitude_retrieval.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: amplitude_retrieval.ipynb <amplitude_retrieval.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: amplitude_retrieval.py <amplitude_retrieval.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: amplitude_retrieval.zip <amplitude_retrieval.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
